--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -721,3 +721,20 @@ spec:
     port: 9555
     targetPort: 9555
 ---
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    kubernetes.io/ingress.class: nginx
+  name: ingress-frontend-external
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /boutique
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend-external
+            port:
+              number: 80
